# moon-tapper

./: .gitignore  CLAUDE.md  emulator-implementation.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-web.yml
scripts/: extract-digimon-first-frames.sh  generate-routes.js  generate-sticker-manifest.js  import-cheats.js  post-build-web.js  remove-sprite-bg.py
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: README.md
src-tauri/src/: beatsaver.rs  db.rs  lib.rs  lyrics.rs  main.rs
src/adapters/classes/: beatgenerator.adapter.ts  beatsaver.adapter.ts  playlist.adapter.ts
src/api/: beatsaver-cache.ts  beatsaver.ts  db.ts  index.ts  lyrics-cache.ts  lyrics.ts  notes.ts  stickers-db.ts  stickers.ts  types.ts
src/components/core/: AdvancedSearchFilters.svelte  Button.svelte  ControllerBindings.svelte  LaneBindingsInline.svelte  Navbar.svelte  RhythmDifficultySelect.svelte  RhythmDuelResults.svelte  RhythmGame.svelte  RhythmLyricsPanel.svelte  RhythmPlaylistManager.svelte  RhythmResults.svelte  RhythmScoreHistory.svelte  RhythmSettingsForm.svelte  RhythmSongBrowser.svelte  StickerItem.svelte  TagSelector.svelte  (+3 more)
src/css/: app.css
src/data/: beatsaver-tags.ts  digimon-frames.json  sticker-manifest.json
src/lib/: routes.json
src/routes/: +layout.svelte  +page.svelte
src/services/: beatsaver-cache.service.ts  lyrics.service.ts  rhythm-playlists.service.ts  rhythm-scores.service.ts  rhythm-settings.service.ts  sticker-thumbnails.service.ts  theme.ts
src/types/: core.type.ts  lyrics.type.ts  rhythm.type.ts  sticker.type.ts
src/utils/: isTauri.ts  localStorageWritableStore.ts
(+20 files in other folders)
