[package]
name = "pokemon-cardio-companion"
version = "0.0.1"
description = "A Tauri + Svelte desktop and mobile application"
authors = ["Arktosmos"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "pokemon_cardio_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
